--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wagnetron</title>
+  <title>Travis Wagner</title>
   <link rel="icon" href="favicon.ico" />
   <style>
     body {
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <h1>Wagnetron</h1>
+  <h1>Travis Wagner</h1>
   <p>Trading & Coding Tools Built for Precision</p>
 
   <div class="links">
