Update links to reflect new branding

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <p>Trading & Coding Tools Built for Precision</p>
 
   <div class="links">
-    <a href="https://youtube.com/@wagnetron" target="_blank">📺 YouTube</a>
-    <a href="https://instagram.com/wagnetron" target="_blank">📱 Instagram</a>
-    <a href="https://gumroad.com/wagnetron" target="_blank">🧠 Gumroad Products</a>
-    <a href="mailto:info@wagnetron.com">✉️ Contact</a>
+    <a href="https://youtube.com/@Travis Wagner" target="_blank">📺 YouTube</a>
+    <a href="https://instagram.com/Travis Wagner" target="_blank">📱 Instagram</a>
+    <a href="https://gumroad.com/Travis Wagner" target="_blank">🧠 Gumroad Products</a>
+    <a href="mailto:info@Travis Wagner.com">✉️ Contact</a>
   </div>
 </body>
 </html>
