First full renovation of index.html

--- a/index.html
+++ b/index.html
@@ -3,45 +3,373 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Travis Wagner</title>
+  <title>Travis Wagner - Web Developer</title>
+  <meta name="description" content="Web developer specializing in custom applications and automation solutions for small businesses.">
   <link rel="icon" href="favicon.ico" />
   <style>
-    body {
-      background: #0b1120;
-      color: #e2e8f0;
-      font-family: sans-serif;
-      text-align: center;
-      padding: 4rem 1rem;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    h1 {
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      color: #e2e8f0;
+      background: linear-gradient(135deg, #0b1120 0%, #1e293b 100%);
+      min-height: 100vh;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+    /* Hero Section */
+    .hero {
+      text-align: center;
+      padding: 100px 20px 80px;
+      background: rgba(255, 255, 255, 0.02);
+      margin-bottom: 60px;
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      color: #60a5fa;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+    .hero .subtitle {
+      font-size: 1.3rem;
+      color: #a5b4fc;
+      margin-bottom: 20px;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 600px;
+      margin: 0 auto;
+      color: #cbd5e1;
+    }
+    /* Section Headers */
+    .section {
+      margin-bottom: 80px;
+    }
+    .section h2 {
       font-size: 2.5rem;
       color: #60a5fa;
+      text-align: center;
+      margin-bottom: 40px;
+      position: relative;
     }
-    p {
-      font-size: 1.2rem;
-      color: #a5b4fc;
-    }
-    .links a {
+    .section h2::after {
+      content: '';
       display: block;
-      margin: 1rem auto;
-      padding: 0.75rem 1.5rem;
-      background: #1e3a8a;
+      width: 60px;
+      height: 3px;
+      background: #60a5fa;
+      margin: 10px auto 0;
+      border-radius: 2px;
+    }
+    /* About Section */
+    .about {
+      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .about p {
+      font-size: 1.1rem;
+      margin-bottom: 20px;
+      color: #cbd5e1;
+    }
+    /* Services Section */
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+    }
+    .service-card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px rgba(96, 165, 250, 0.2);
+    }
+    .service-card h3 {
+      color: #60a5fa;
+      margin-bottom: 15px;
+      font-size: 1.4rem;
+    }
+    .service-card p {
+      color: #cbd5e1;
+      font-size: 1rem;
+    }
+    /* Portfolio Section */
+    .portfolio {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 30px;
+    }
+    .portfolio-item {
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s ease;
+    }
+    .portfolio-item:hover {
+      transform: translateY(-5px);
+    }
+    .portfolio-item img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      background: #374151;
+    }
+    .portfolio-content {
+      padding: 25px;
+    }
+    .portfolio-content h3 {
+      color: #60a5fa;
+      margin-bottom: 10px;
+      font-size: 1.3rem;
+    }
+    .portfolio-content p {
+      color: #cbd5e1;
+      margin-bottom: 20px;
+    }
+    .portfolio-link {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #60a5fa;
       color: white;
       text-decoration: none;
-      width: fit-content;
-      border-radius: 8px;
+      border-radius: 6px;
+      transition: background 0.3s ease;
+    }
+    .portfolio-link:hover {
+      background: #3b82f6;
+    }
+    /* Contact Section */
+    .contact {
+      background: rgba(255, 255, 255, 0.02);
+      padding: 60px 0;
+      text-align: center;
+    }
+    .contact-form {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    .contact-form form {
+      display: grid;
+      gap: 20px;
+    }
+    .form-group {
+      text-align: left;
+    }
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      color: #cbd5e1;
+      font-weight: 500;
+    }
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 6px;
+      background: rgba(255, 255, 255, 0.05);
+      color: #e2e8f0;
+      font-size: 1rem;
+    }
+    .form-group input:focus,
+    .form-group textarea:focus {
+      outline: none;
+      border-color: #60a5fa;
+      box-shadow: 0 0 0 2px rgba(96, 165, 250, 0.2);
+    }
+    .form-group textarea {
+      resize: vertical;
+      min-height: 120px;
+    }
+    .submit-btn {
+      padding: 12px 30px;
+      background: #60a5fa;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .submit-btn:hover {
+      background: #3b82f6;
+    }
+    /* Footer */
+    footer {
+      background: rgba(0, 0, 0, 0.3);
+      padding: 40px 0;
+      text-align: center;
+    }
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+    .social-links a {
+      color: #cbd5e1;
+      font-size: 1.5rem;
+      transition: color 0.3s ease;
+      text-decoration: none;
+    }
+    .social-links a:hover {
+      color: #60a5fa;
+    }
+    .footer-text {
+      color: #94a3b8;
+      font-size: 0.9rem;
+    }
+    /* Responsive */
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+      .hero .subtitle {
+        font-size: 1.1rem;
+      }
+      .section h2 {
+        font-size: 2rem;
+      }
+      .services, .portfolio {
+        grid-template-columns: 1fr;
+      }
+      .social-links {
+        gap: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Travis Wagner</h1>
-  <p>Trading & Coding Tools Built for Precision</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="container">
+      <h1>Travis Wagner</h1>
+      <div class="subtitle">Web Developer</div>
+      <p>Building Custom Applications & Automation Solutions for Small Businesses</p>
+    </div>
+  </section>
 
-  <div class="links">
-    <a href="https://youtube.com/@Travis Wagner" target="_blank">📺 YouTube</a>
-    <a href="https://instagram.com/Travis Wagner" target="_blank">📱 Instagram</a>
-    <a href="https://gumroad.com/Travis Wagner" target="_blank">🧠 Gumroad Products</a>
-    <a href="mailto:info@Travis Wagner.com">✉️ Contact</a>
-  </div>
+  <!-- About Section -->
+  <section class="section about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I specialize in creating tailored web applications and automation solutions that help small businesses establish a strong online presence and streamline their operations. From eco-tourism platforms to sports management dashboards, I deliver custom solutions that drive results.</p>
+      <p>With expertise in modern web technologies, I focus on building scalable, user-friendly applications that meet the unique needs of local businesses.</p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section class="section">
+    <div class="container">
+      <h2>Services</h2>
+      <div class="services">
+        <div class="service-card">
+          <h3>Web Applications</h3>
+          <p>Custom web apps built with modern frameworks, designed to solve specific business challenges and improve efficiency.</p>
+        </div>
+        <div class="service-card">
+          <h3>Automation Solutions</h3>
+          <p>Streamline repetitive tasks with automated workflows, scripts, and integrations that save time and reduce errors.</p>
+        </div>
+        <div class="service-card">
+          <h3>Dashboard Development</h3>
+          <p>Interactive dashboards for data visualization, tracking metrics, and managing operations with real-time insights.</p>
+        </div>
+        <div class="service-card">
+          <h3>Custom Websites</h3>
+          <p>Professional websites and landing pages that effectively showcase your business and convert visitors into customers.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <section class="section">
+    <div class="container">
+      <h2>Portfolio</h2>
+      <div class="portfolio">
+        <div class="portfolio-item">
+          <div style="width: 100%; height: 200px; background: linear-gradient(45deg, #10b981, #059669); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">🌿 Eco-Tourism</div>
+          <div class="portfolio-content">
+            <h3>Kururu</h3>
+            <p>A comprehensive landing page for an eco-tourism company in the Amazon rainforest, featuring booking integration and destination information.</p>
+            <a href="https://tlwagner.com/kururu" target="_blank" class="portfolio-link">View Project</a>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div style="width: 100%; height: 200px; background: linear-gradient(45deg, #3b82f6, #1d4ed8); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">📊 Dashboard</div>
+          <div class="portfolio-content">
+            <h3>WBC Dashboard</h3>
+            <p>A comprehensive dashboard for tracking statistics, rosters, and schedules for a baseball tournament in Southwest Florida.</p>
+            <a href="https://tlwagner.com/WBC-Dashboard" target="_blank" class="portfolio-link">View Project</a>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div style="width: 100%; height: 200px; background: linear-gradient(45deg, #f59e0b, #d97706); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">⚾ Tournament</div>
+          <div class="portfolio-content">
+            <h3>Wooden Bat</h3>
+            <p>A full-featured website for an annual baseball tournament in Southwest Florida, including registration and event information.</p>
+            <a href="https://tlwagner.com/Wooden-Bat" target="_blank" class="portfolio-link">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="section contact">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <div class="contact-form">
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required></textarea>
+          </div>
+          <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="social-links">
+        <a href="https://www.instagram.com/travislwagner/" target="_blank" title="Instagram">📱</a>
+        <a href="https://www.facebook.com/travislwagner" target="_blank" title="Facebook">📘</a>
+        <a href="https://www.youtube.com/@TravisLWagner" target="_blank" title="YouTube">📺</a>
+        <a href="https://x.com/TravisLWagner" target="_blank" title="X (Twitter)">🐦</a>
+        <a href="https://www.linkedin.com/in/travislwagner/" target="_blank" title="LinkedIn">💼</a>
+        <a href="https://github.com/wagnificent" target="_blank" title="GitHub">💻</a>
+      </div>
+      <div class="footer-text">
+        © 2025 Travis Wagner. All rights reserved.
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
