Fixed the link to Kururu

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <div class="portfolio-content">
             <h3>Kururu</h3>
             <p>A comprehensive landing page for an eco-tourism company in the Amazon rainforest, featuring booking integration and destination information.</p>
-            <a href="https://tlwagner.com/kururu" target="_blank" class="portfolio-link">View Project</a>
+            <a href="https://tlwagner.com/Kururu" target="_blank" class="portfolio-link">View Project</a>
           </div>
         </div>
         <div class="portfolio-item">
