Added a link to my eCommerce portfolio item

--- a/index.html
+++ b/index.html
@@ -327,6 +327,14 @@
             <a href="https://tlwagner.com/Wooden-Bat" target="_blank" class="portfolio-link">View Project</a>
           </div>
         </div>
+        <div class="portfolio-item">
+          <div style="width: 100%; height: 200px; background: linear-gradient(45deg, #10b981, #059669); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">🛒 E-commerce</div>
+          <div class="portfolio-content">
+            <h3>E-commerce Site</h3>
+            <p>A very basic ecommerce site with essential shopping functionality and product management.</p>
+            <a href="https://tlwagner.com/eCommerce-Site/" target="_blank" class="portfolio-link">View Project</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
